# SubtitleHound

./: CMakeLists.txt  MD5.h  Readme.md  SubtitleHoundApp.cpp  SubtitleHoundApp.h  SubtitleHoundMain.cpp  SubtitleHoundMain.h  wx_pch.h
wxsmith/: SubtitleHoundframe.wxs
